--- a/.ruff.toml
+++ b/.ruff.toml
@@ -14,6 +14,10 @@ ignore = [
     "D212", # multi-line-summary-first-line (incompatible with formatter)
     "COM812", # incompatible with formatter
     "ISC001", # incompatible with formatter
+    "N806", # non-lowercase-variable-in-function
+    "G004", # logging-f-string
+    "ERA001", # commented-out-code
+    "D102", # undocumented-public-method
 ]
 
 [lint.flake8-pytest-style]
