--- a/.ruff.toml
+++ b/.ruff.toml
@@ -20,6 +20,15 @@ ignore = [
     "D101", # undocumented-public-class
     "D102", # undocumented-public-method
     "BLE001", # blind-except
+    "DTZ005", #call-datetime-now-without-tzinfo
+    "PLR0912", #too-many-branches
+    "N802", #invalid-function-name
+    "N803", #argumentname must be lowercase
+    "N815", #argumentname must be lowercase
+    "PLR0913", #too-many-arguments
+    "FBT001", # boolean-type-hint-positional-argument
+    "FBT003", # boolean-type-hint-positional-argument
+    "TRY400", # error-instead-of-exception
 ]
 
 [lint.flake8-pytest-style]
