--- a/.ruff.toml
+++ b/.ruff.toml
@@ -29,6 +29,8 @@ ignore = [
     "FBT001", # boolean-type-hint-positional-argument
     "FBT003", # boolean-type-hint-positional-argument
     "TRY400", # error-instead-of-exception
+    "TC001", # typing-only-third-party-import
+    "TC002", # typing-only-third-party-import
 ]
 
 [lint.flake8-pytest-style]
