--- a/custom_components/zendure_ha/manifest.json
+++ b/custom_components/zendure_ha/manifest.json
@@ -7,13 +7,11 @@
   "config_flow": true,
   "dependencies": [],
   "documentation": "https://github.com/fireson/zendure-ha",
-  "homekit": {},
+  "issue_tracker": "https://github.com/FireSon/Zendure-HA/issues",
   "iot_class": "local_polling",
   "requirements": [
     "paho-mqtt"
   ],
   "single_config_entry": false,
-  "ssdp": [],
   "version": "1.0.18",
-  "zeroconf": []
 }
