Refactor Zendure integration: remove host configuration, improve error handling, and add power update functionality

--- a/custom_components/zendure_ha/manifest.json
+++ b/custom_components/zendure_ha/manifest.json
@@ -12,6 +12,6 @@
   "requirements": [
     "paho-mqtt"
   ],
-  "single_config_entry": false,
-  "version": "1.0.21"
+  "single_config_entry": true,
+  "version": "1.0.23"
 }
