--- a/custom_components/zendure_ha/manifest.json
+++ b/custom_components/zendure_ha/manifest.json
@@ -10,8 +10,9 @@
   "iot_class": "local_polling",
   "issue_tracker": "https://github.com/FireSon/Zendure-HA/issues",
   "requirements": [
-    "paho-mqtt"
+    "paho-mqtt",
+    "stringcase==1.2.0"
   ],
   "single_config_entry": true,
-  "version": "1.0.28"
+  "version": "pre1.0.29"
 }
