--- a/custom_components/zendure_ha/manifest.json
+++ b/custom_components/zendure_ha/manifest.json
@@ -12,7 +12,7 @@
   "requirements": [
     "paho-mqtt",
     "stringcase==1.2.0",
-    "bluetooth_adapters"
+    "bluetooth"
   ],
   "single_config_entry": true,
   "version": "1.0.35"
