--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 colorlog==6.9.0
-homeassistant==2025.2.5
+homeassistant==2025.4.0
 pip>=21.3.1
 ruff==0.11.8
 aiohttp
 voluptuous
-paho.mqtt
+paho.mqtt==2.1.0
