--- a/custom_components/zendure_ha/manifest.json
+++ b/custom_components/zendure_ha/manifest.json
@@ -9,9 +9,9 @@
     "bluetooth",
     "mqtt"
   ],
-  "documentation": "https://github.com/fireson/zendure",
+  "documentation": "https://github.com/fireson/zendure-HA",
   "iot_class": "local_polling",
-  "issue_tracker": "https://github.com/FireSon/Zendure/issues",
+  "issue_tracker": "https://github.com/FireSon/Zendure-HA/issues",
   "requirements": [
     "paho-mqtt==2.1.0",
     "stringcase==1.2.0"
