--- a/custom_components/zendure-ha/manifest.json
+++ b/custom_components/zendure-ha/manifest.json
@@ -1,5 +1,5 @@
 {
-  "domain": "zendure_ha",
+  "domain": "zendure-ha",
   "name": "Zendure Home Assistant Integration",
   "codeowners": [
     "@fireson"
