Revert "Initial version"
This reverts commit 811d11220503552c67484dbade551b40863014c6.

--- a/custom_components/zendure_ha/manifest.json
+++ b/custom_components/zendure_ha/manifest.json
@@ -1,5 +1,5 @@
 {
-  "domain": "zendure-ha",
+  "domain": "zendure_ha",
   "name": "Zendure Home Assistant Integration",
   "codeowners": [
     "@fireson"
