--- a/custom_components/zendure_ha/manifest.json
+++ b/custom_components/zendure_ha/manifest.json
@@ -9,7 +9,7 @@
     "bluetooth",
     "mqtt"
   ],
-  "documentation": "https://github.com/fireson/zendure-HA",
+  "documentation": "https://github.com/fireson/zendure",
   "iot_class": "local_polling",
   "issue_tracker": "https://github.com/FireSon/Zendure/issues",
   "requirements": [
@@ -17,5 +17,5 @@
     "stringcase==1.2.0"
   ],
   "single_config_entry": true,
-  "version": "1.1.0-pre8"
+  "version": "1.1.0-pre9"
 }
