--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,3 @@
-
-
 # This GitHub action workflow is meant to be copyable to any repo that have the same structure.
 # - Your integration exist under custom_components/{INTEGRATION_NAME}/[integration files]
 # - You are using GitHub releases to publish new versions
@@ -7,9 +5,8 @@
 name: Release Workflow
 
 on:
-  push:
-    tags:
-      - "v*"
+  release:
+    types: [published]
 
 jobs:
   release:
@@ -27,7 +24,7 @@ jobs:
         id: information
         run: |
           name=$(find custom_components/ -type d -maxdepth 1 | tail -n 1 | cut -d "/" -f2)
-          echo "::set-output name=name::$name"
+          echo "{name}={$name}" >> $GITHUB_OUTPUT
 
       - name: 🖊️ Set version number
         run: |
