--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,6 +24,8 @@ jobs:
         id: information
         run: |
           name=$(find custom_components/ -type d -maxdepth 1 | tail -n 1 | cut -d "/" -f2)
+          echo "{name}=$name" >> $GITHUB_OUTPUT
+          echo "::set-output name={name}::{value}"
           echo "::set-output name=name::$name"
 
       - name: 🖊️ Set version number
