Update FuseGroup, unsigned int, and remaining time

--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -1,5 +1,5 @@
 {
-    "name": "fireson/zendure_ha",
+    "name": "homeassistant-Zendure",
     "image": "mcr.microsoft.com/devcontainers/python:3.13",
     "postCreateCommand": "scripts/setup",
     "forwardPorts": [
