Update bug report template with new device options
Added options for SF2400 Pro and SF1600 AC devices.

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -53,6 +53,9 @@ body:
       label: What device are you using?
       options:
         - SF2400 AC
+        - SF2400 AC+
+        - SF2400 Pro
+        - SF1600 AC+        
         - SF800 Pro
         - SF800 Plus
         - SF800
