--- a/custom_components/zendure_ha/manifest.json
+++ b/custom_components/zendure_ha/manifest.json
@@ -7,7 +7,8 @@
   "config_flow": true,
   "dependencies": [
     "bluetooth",
-    "mqtt"
+    "mqtt",
+    "recorder"
   ],
   "documentation": "https://github.com/zendure/zendure-ha",
   "iot_class": "local_polling",
